# slokit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  ROADMAP.md
.github/workflows/: ci.yml  publish.yml
docs/: SEMVER.md
docs/design/: SLI_PLUGINS.md
examples/infraportal/: README.md  rules.yaml
examples/infraportal/slos/: accounts-service.yaml  activities-service.yaml  automation-service.yaml  contacts-service.yaml  integrations-service.yaml  opportunities-service.yaml  reporting-service.yaml  search-service.yaml
schema/: slokit-spec.schema.json
src/: budget.rs  burn_rate.rs  check.rs  dashboard.rs  error.rs  lib.rs  simulate.rs  sli.rs  slo.rs  window.rs
src/generate/: alert.rs  metadata.rs  mod.rs  recording.rs
src/spec/: lint.rs  mod.rs  openslo.rs  parse.rs  plugin.rs  validate.rs
tests/: check_http.rs  dashboard.rs  examples_infraportal.rs  generate.rs  multi_spec.rs  openslo.rs  plugin.rs  promtool.rs  schema.rs
tests/fixtures/: sample.yaml
tests/fixtures/openslo/: latency.yaml  multi-objective.yaml  ratio.yaml  stream.yaml  unrepresentable.yaml
tests/snapshots/: dashboard__dashboard.snap  generate__operator_rules.snap  generate__prometheus_rules.snap  openslo__openslo_rules.snap  plugin__plugin_rules.snap
